# AquaEye

backend/: .dockerignore  Dockerfile  main.py  requirements.txt
backend/model/: inference.py  main.py  reporting.py  unet.py
backend/static/: asset-manifest.json  index.html
backend/static/static/css/: main.03207ae2.css  main.03207ae2.css.map
backend/static/static/js/: main.41b296b6.js  main.41b296b6.js.LICENSE.txt  main.41b296b6.js.map
cpp_engine/: CMakeLists.txt  DegradationEngine.cpp  DegradationEngine.h  main.cpp
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css  mock-data.json
frontend/src/features/analysis/: AnalysisView.js  AnalysisView.module.css
frontend/src/styles/: variables.css
